Updated documentation and Subscription model after meeting regarding SS 12000 interpretation. Now going by YAML schema and not provided example in SS 12000 standard.
